--- a/styles/styles.css
+++ b/styles/styles.css
@@ -635,7 +635,7 @@ section.contenu_principal {
 }
 
 nav {
-  width: 1002px;
+  width: 1000px;
   margin: auto;
   padding-top: 32px;
   opacity: 0;
@@ -650,7 +650,7 @@ nav {
 
 nav ul {
   background-color: #f5f5f5;
-  height: 448px;
+  height: 444px;
 }
 
 nav ul li {
@@ -659,12 +659,8 @@ nav ul li {
     background-color: #f5f5f5;
     float: left;
     list-style-type: none;
-    border: 1px solid #e1e1e1;
-}
-
-nav ul li:last-child {
-    margin-left: 334px;
-    margin-right: 334px;
+    border-bottom: 1px solid #e1e1e1;
+    border-left: 1px solid #e1e1e1;
 }
 
 nav ul li a {
@@ -737,46 +733,6 @@ nav ul li:hover {
   height: 960px;
 }
 
-.couleur_environnement {
-  background-color: #35ab52;
-}
-
-.couleur_engagement {
-  background-color: #00aaa8;
-}
-
-.couleur_legislation {
-  background-color: #fcb034;
-}
-
-.couleur_sante {
-  background-color: #f36d21;
-}
-
-.couleur_technique {
-  background-color: #9c2776;
-}
-
-.couleur_transport {
-  background-color: #23408f;
-}
-
-.couleur_livre {
-  background-color: #628b9f;
-}
-
-.couleur_developpement {
-  background-color: #008dd3;
-}
-
-.couleur_vie {
-  background-color: #adc6d1;
-}
-
-.couleur_europe {
-  background-color: #00aaa8;
-}
-
 .description {
   width: 380px;
   margin: auto;
@@ -785,8 +741,7 @@ nav ul li:hover {
 }
 
 h4 {
-  font-size: 44px;
-  line-height: 420px;
+  font-size: 40px;
   font-family: 'Roboto', sans-serif;
   font-weight: lighter;
 }
@@ -826,9 +781,6 @@ h6 {
   display: block;
   width: 154px;
   height: 28px;
-  background-color: #35ab52;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
   text-decoration: none;
   color: #ffffff;
   font-size: 16px;
@@ -836,6 +788,47 @@ h6 {
   font-family: 'Open sans', sans-serif;
   font-weight: lighter;
   margin: auto;
+}
+
+
+.couleur_environnement {
+  background-color: #35ab52;
+}
+
+.couleur_engagement {
+  background-color: #00aaa8;
+}
+
+.couleur_legislation {
+  background-color: #fcb034;
+}
+
+.couleur_sante {
+  background-color: #f36d21;
+}
+
+.couleur_technique {
+  background-color: #9c2776;
+}
+
+.couleur_transport {
+  background-color: #23408f;
+}
+
+.couleur_livre {
+  background-color: #628b9f;
+}
+
+.couleur_developpement {
+  background-color: #008dd3;
+}
+
+.couleur_vie {
+  background-color: #adc6d1;
+}
+
+.couleur_europe {
+  background-color: #00aaa8;
 }
 
 /* Footer */
