--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,7 @@ hr {
     -webkit-transition: 1.4s;
     -moz-transition: 1.4s;
     transition: 1.4s;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -51,10 +52,10 @@ h1 {
     /*text-shadow: 0px 4px 4px black;*/
     font-weight: medium;
     height: 92px;
-    width: 100%;
+    width: 50%;
     text-align: center;
     /*letter-spacing: 2px;*/
-    margin-bottom: 110px;
+    margin-bottom: 30px;
     -webkit-animation-name: h1;
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: 1;
@@ -196,65 +197,6 @@ h3 {
 
 /* General */
 
-
-/* Loader page */
-
-.loader {
-  width: 100%;
-  height: 100vh;
-}
-
-.loader .logo_loader {
-  width: 144px;
-  height: 100vh;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-figure.image_loader {
-  margin: 0%;
-  float: none;
-  width: 100%;
-  height: 144px;
-  top: 40vh;
-  position: relative;
-}
-
- .spinner {
-  width: 140px;
-  height: 140px;
-  border: 2px solid #f3f3f3;
-  border-top: 3px solid #333333;
-  border-radius: 50%;
-  position: relative;
-  animation-name: spin;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
- }
-
-@keyframes spin {
-
-from{
-  transform: rotate(0deg);
-} to {
-  transform: rotate(360deg);
-}
-
-}
-
-.loader img {
-  position: absolute;
-  width: 74px;
-  height: 100px;
-  margin: 35px;
-  margin-top: 22px;
-}
-
-
-/* Loader page */
-
 /* Conteneur accueil */
 
 .accueil {
@@ -280,6 +222,69 @@ from{
     z-index: 20;
     top: 24%;
     width: 100%;
+    margin-bottom: 30px;
+    -webkit-animation-name: titre;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-out;
+    -moz-animation-name: titre;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease-out;
+    animation-name: titre;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+}
+
+@-moz-keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+@-webkit-keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+@keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+.titre img {
+  width: 50%;
+  margin-left: 25%;
 }
 
 .anchor {
@@ -476,7 +481,7 @@ section {
 
 .chiffres_figure {
     position: relative;
-    width: 88%;
+    width: 100%;
     min-height: 10vh;
     margin-left: auto;
     margin-right: auto;
@@ -494,12 +499,17 @@ section {
 
 figure {
   position: relative;
-  width: 280px;
+  width: 50%;
   height: 220px;
-  margin-left: 15%;
+/*  margin-left: 15%;
   margin-right: 10%;
-  margin-bottom: 5%;
+*/  margin-bottom: 5%;
   float: left;
+}
+
+figure > img {
+  width: 50%;
+  max-width: 337px;
 }
 
 .chiffres_left {
@@ -507,7 +517,7 @@ figure {
     -webkit-transform: translate(-2000px);
     -moz-transform: translate(-2000px);
     transform: translate(-2000px);
-    transition: 2s;
+    transition: 1.4s;
 }
 
 .chiffres_right {
@@ -515,7 +525,7 @@ figure {
     -webkit-transform: translate(+2000px);
     -moz-transform: translate(+2000px);
     transform: translate(+2000px);
-    transition: 2s;
+    transition: 1.4s;
 }
 
 figcaption {
@@ -663,7 +673,7 @@ nav ul li {
 }
 
 .hidden_li {
-  visibility: hidden;
+  pointer-events: none;
 }
 
 nav ul li a {
@@ -697,7 +707,7 @@ nav ul li:hover {
     position: relative;
     z-index: 0;
     width: 100%;
-    height: 50vh;
+    height: 54vh;
     background-image: url(../img/image_granulats.png);
     background-position: center;
     background-size: cover;
@@ -733,6 +743,15 @@ nav ul li:hover {
 
 .element_bis {
   width: 320px;
+}
+
+.image_resize {
+  margin-top: 40px;
+  width: 100px;
+}
+
+.image_resize2 {
+  width: 160px;
 }
 
 .element_horizontal {
@@ -791,7 +810,6 @@ h6 {
   font-family: 'Open sans', sans-serif;
   font-weight: lighter;
   text-align: left;
-  margin-top: 2vh;
   margin-bottom: 2vh;
 }
 
@@ -938,11 +956,12 @@ footer {
 }
 
 .adresse_footer,
-.social_network {
-  width: 240px;
+.social_network,
+.download {
+  width: 220px;
   height: 180px;
   float: left;
-  margin-left: 100px;
+  margin-left: 50px;
 }
 
 .adresse_footer p {
@@ -973,6 +992,43 @@ footer {
   height: 40px;
   background-color: #f5f5f5;
   border-radius: 50%;
+}
+
+.copyright {
+  width: 1000px;
+  margin: auto;
+  padding-top: 34px;
+}
+
+.copyright p {
+  width: 22%;
+  float: left;
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.copyright ul {
+  width: 75%;
+  float: left;
+}
+
+.copyright ul li {
+  float: right;
+  list-style-type: none;
+  margin-left: 2%;
+  border-right: 1px solid #ffffff;
+}
+
+.copyright ul:first-child {
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.copyright ul li a {
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  color: #ffffff;
 }
 
 /* Header */
