--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ hr {
 }
 
 .site {
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 .conteneur_site {
@@ -51,10 +51,10 @@ h1 {
     /*text-shadow: 0px 4px 4px black;*/
     font-weight: medium;
     height: 92px;
-    width: 100%;
+    width: 50%;
     text-align: center;
     /*letter-spacing: 2px;*/
-    margin-bottom: 110px;
+    margin-bottom: 30px;
     -webkit-animation-name: h1;
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: 1;
@@ -196,65 +196,6 @@ h3 {
 
 /* General */
 
-
-/* Loader page */
-
-.loader {
-  width: 100%;
-  height: 100vh;
-}
-
-.loader .logo_loader {
-  width: 144px;
-  height: 100vh;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-figure.image_loader {
-  margin: 0%;
-  float: none;
-  width: 100%;
-  height: 144px;
-  top: 40vh;
-  position: relative;
-}
-
- .spinner {
-  width: 140px;
-  height: 140px;
-  border: 2px solid #f3f3f3;
-  border-top: 3px solid #333333;
-  border-radius: 50%;
-  position: relative;
-  animation-name: spin;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
- }
-
-@keyframes spin {
-
-from{
-  transform: rotate(0deg);
-} to {
-  transform: rotate(360deg);
-}
-
-}
-
-.loader img {
-  position: absolute;
-  width: 74px;
-  height: 100px;
-  margin: 35px;
-  margin-top: 22px;
-}
-
-
-/* Loader page */
-
 /* Conteneur accueil */
 
 .accueil {
@@ -280,6 +221,69 @@ from{
     z-index: 20;
     top: 24%;
     width: 100%;
+    margin-bottom: 30px;
+    -webkit-animation-name: titre;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-out;
+    -moz-animation-name: titre;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease-out;
+    animation-name: titre;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+}
+
+@-moz-keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+@-webkit-keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+@keyframes titre {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 1%;
+    }
+    75% {
+        left: -1%;
+    }
+    100% {
+        left: 0%;
+    }
+}
+
+.titre img {
+  width: 50%;
+  margin-left: 25%;
 }
 
 .anchor {
@@ -476,7 +480,7 @@ section {
 
 .chiffres_figure {
     position: relative;
-    width: 88%;
+    width: 100%;
     min-height: 10vh;
     margin-left: auto;
     margin-right: auto;
@@ -494,12 +498,17 @@ section {
 
 figure {
   position: relative;
-  width: 280px;
+  width: 50%;
   height: 220px;
-  margin-left: 15%;
+/*  margin-left: 15%;
   margin-right: 10%;
-  margin-bottom: 5%;
+*/  margin-bottom: 5%;
   float: left;
+}
+
+figure > img {
+  width: 40%;
+  max-width: 337px;
 }
 
 .chiffres_left {
@@ -507,7 +516,7 @@ figure {
     -webkit-transform: translate(-2000px);
     -moz-transform: translate(-2000px);
     transform: translate(-2000px);
-    transition: 2s;
+    transition: 1.4s;
 }
 
 .chiffres_right {
@@ -515,7 +524,7 @@ figure {
     -webkit-transform: translate(+2000px);
     -moz-transform: translate(+2000px);
     transform: translate(+2000px);
-    transition: 2s;
+    transition: 1.4s;
 }
 
 figcaption {
@@ -663,13 +672,13 @@ nav ul li {
 }
 
 .hidden_li {
-  visibility: hidden;
+  pointer-events: none;
 }
 
 nav ul li a {
     display: block;
     width: 300px;
-    margin-top: 2.4vh;
+    margin-top: 3vh;
     margin-left: auto;
     margin-right: auto;
     line-height: 4vh;
@@ -697,7 +706,7 @@ nav ul li:hover {
     position: relative;
     z-index: 0;
     width: 100%;
-    height: 50vh;
+    height: 54vh;
     background-image: url(../img/image_granulats.png);
     background-position: center;
     background-size: cover;
@@ -735,6 +744,15 @@ nav ul li:hover {
   width: 320px;
 }
 
+.image_resize {
+  margin-top: 20px;
+  width: 100px;
+}
+
+.image_resize2 {
+  width: 160px;
+}
+
 .element_horizontal {
     width: 960px;
     height: 480px;
@@ -769,10 +787,27 @@ nav ul li:hover {
   margin-top: 90%;
 }
 
+.underline {
+  border-bottom: 2px solid #ffffff;
+}
+
+.align {
+  width: 180px;
+  text-align: left;
+}
+
+.no_margin {
+  margin: 0;
+}
+
+.full_width {
+  width: 100% !important;
+}
+
 h4 {
   font-size: 40px;
   font-family: 'Roboto', sans-serif;
-  font-weight: lighter;
+  font-weight: 300;
 }
 
 h5 {
@@ -782,7 +817,6 @@ h5 {
   font-weight: lighter;
   text-align: left;
   margin-top: 2vh;
-  margin-bottom: 2vh;
 }
 
 h6 {
@@ -814,13 +848,17 @@ h6 {
   font-size: 16px;
   text-align: center;
   font-family: 'Open sans', sans-serif;
-  font-weight: lighter;
+  font-weight: 100;
   margin: auto;
-  line-height: 25px;
+  line-height: 26px;
 }
 
 .couleur_element {
   background-color: #dcddde;
+}
+
+.couleur_element2 {
+  background-color: #eeeeee;
 }
 
 .couleur_environnement {
@@ -913,12 +951,12 @@ footer {
 }
 
 .footer_haut {
-  height: 180px;
+  min-height: 180px;
   background-color: #ffffff;
 }
 
 .footer_bas {
-  height: 80px;
+  min-height: 80px;
   background-color: #5e6977;
 }
 
@@ -938,16 +976,17 @@ footer {
 }
 
 .adresse_footer,
-.social_network {
-  width: 240px;
+.social_network,
+.download {
+  width: 220px;
   height: 180px;
   float: left;
-  margin-left: 100px;
+  margin-left: 50px;
 }
 
 .adresse_footer p {
   text-align: left;
-  margin-top: 40px;
+  margin-top: 46px;
   font-size: 14px;
   color: #959595;
   font-family: 'Open sans', sans-serif;
@@ -964,8 +1003,8 @@ footer {
   height: 40px;
   display: block;
   float: left;
-  margin-top: 50px;
-  margin-left: 20px;
+  margin-top: 62px;
+  margin-left: 24px;
 }
 
 .social_network a:hover {
@@ -973,6 +1012,69 @@ footer {
   height: 40px;
   background-color: #f5f5f5;
   border-radius: 50%;
+}
+
+.download img {
+  margin-top: 50px;
+  width: 200px;
+  height: 64px;
+}
+
+.copyright {
+  width: 1000px;
+  margin: auto;
+}
+
+.copyright p {
+    width: 22%;
+    float: left;
+    font-family: 'Open sans' , sans-serif;
+    font-size: 12px;
+    color: #ffffff;
+    margin-top: 30px;
+}
+
+.copyright ul {
+  width: 70%;
+  height: 80px;
+  float: left;
+}
+
+.copyright ul li {
+  float: right;
+  list-style-type: none;
+  margin-top: 30px;
+  margin-left: 2%;
+}
+
+.copyright ul:first-child {
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.copyright ul li a {
+  width: 160px;
+  display: block;
+  text-decoration: none;
+  font-family: 'Open sans' , sans-serif;
+  font-size: 12px;
+  color: #ffffff;
+  border-right: 1px solid #ffffff;
+}
+
+.copyright ul li:last-child a,
+.copyright ul li:first-child a {
+  width: 64px;
+}
+
+.copyright ul li:first-child a {
+  border: none;
+}
+
+.copyright a img {
+  width: 50px;
+  margin-top: 16px;
+  margin-left: 16px;
 }
 
 /* Header */
@@ -1165,7 +1267,7 @@ header p {
 }
 
 .nav_responsive_bar li {
-    height: 60px;
+    height: 6vh;
     width: 300px;
     list-style-type: none;
     position: relative;
@@ -1196,300 +1298,181 @@ header p {
 
 /* Nav Responsive */
 
-/** Responsive media queries**/
+/** MEdia QUerie for responsive **/
 
-@media screen and (max-width: 1366px) and (max-height: 768px) {
+@media screen and (max-width: 1024px) {
 
-.background {
-   width: 120%;
-   -webkit-transform: translate(-8%);
-   -moz-transform: translate(-8%);
-   transform: translate(-8%);
-}
-
-.creation img {
-  height: auto;
-}
-
-footer {
-  padding-bottom: 24px;
-}
-
-}
-
-/** Tablet pro portrait **/
-
-@media screen and (max-width: 1024px) and (min-height: 1024px) {
-
-.background {
-   width: 200%;
-   -webkit-transform: translate(-25%);
-   -moz-transform: translate(-25%);
-   transform: translate(-25%);
-}
-
-header {
-  display: none;
-}
-
-.moi p {
-  padding-top: 2vh;
-}
-
-figure {
-  width: 10%;
-  margin: 3.5% 7.3%;
-}
-
-figure.creation{
-  width: 42%;
-  margin: 4% 4%;
-}
-
-}
-
-@media screen and (max-width: 1024px) and (max-height: 768px) {
-
-.background {
- width: 120%;
- -webkit-transform: translate(-8%);
- -moz-transform: translate(-8%);
- transform: translate(-8%);
-}
-
-h1 {
- font-size: 60px;
- height: 70px;
-}
-
-h2 {
- font-size: 16px;
-}
-
-.monAvatar {
-  border: 8px solid #3A3A3C;
-  width: 160px;
-  height: 160px;
-}
-
-.moi p {
-  padding-top: 4vh;
-}
-
-figcaption {
-  font-size: 16px;
-}
-
-figure.creation figcaption {
-  display: none;
-}
-
-.formulaire {
-  width: 80%;
-}
-
-footer {
-  height: 100px;
-}
 
 }
 
 @media screen and (max-width: 768px) {
 
-.background {
- width: 200%;
- -webkit-transform: translate(-25%);
- -moz-transform: translate(-25%);
- transform: translate(-25%);
-}
 
-header {
-  display: none;
-}
-
-h1 {
- font-size: 60px;
- height: 70px;
-}
-
-h2 {
- font-size: 16px;
-}
-
-h3 {
-  font-size: 16px;
-}
-
-.monAvatar {
-  border: 8px solid #3A3A3C;
-  width: 160px;
-  height: 160px;
-}
-
-.moi p {
-  padding-top: 4vh;
-}
-
-.skills {
-  min-height: 50vh;
-}
-
-figure {
-  width: 12%;
-  margin: 3.5% 6.3%;
-}
-
-figcaption {
-  font-size: 16px;
-}
-
-.scrollUp {
-  right: 3%;
-}
-
-figure.creation{
-  width: 42%;
-  margin: 4% 4%;
-}
-
-.video {
-  display: none;
-}
-
-.image {
-  display: none;
-}
-
-input {
-  width: 50%;
-}
 
 }
 
 @media screen and (max-width: 420px) {
 
-.background {
-   width: 190%;
-   -webkit-transform: translate(0%);
-   -moz-transform: translate(0%);
-   transform: translate(0%);
+header {
+  top: 26px;
+  right: -14%;
 }
 
-h1 {
- font-size: 40px;
- height: 50px;
+header img {
+  width: 76%;
+}
+
+.titre {
+  top: 26%;
+}
+
+.titre img {
+    width: 80%;
+    margin-left: 10%;
 }
 
 h2 {
- font-size: 12px;
+  font-size: 12px;
 }
 
 .logo {
- bottom: 20px;
- left: 30px;
+  bottom: 160px;
+  left: 92px;
+
 }
 
-.monAvatar {
-  border: 4px solid #3A3A3C;
-  width: 120px;
-  height: 120px;
+@-moz-keyframes logo {
+    0% {
+        bottom: 0px;
+    }
+    50% {
+        bottom: 164px;
+    }
+    75% {
+        bottom: 156px;
+    }
+    100% {
+        bottom: 160px;
+    }
 }
 
-.moi p {
-  padding-top: 2vh;
+@-webkit-keyframes logo {
+    0% {
+        bottom: 0px;
+    }
+    50% {
+        bottom: 164px;
+    }
+    75% {
+        bottom: 156px;
+    }
+    100% {
+        bottom: 160px;
+    }
 }
 
-.skills {
-  min-height: 62vh;
+@keyframes logo {
+    0% {
+        bottom: 0px;
+    }
+    50% {
+        bottom: 164px;
+    }
+    75% {
+        bottom: 156px;
+    }
+    100% {
+        bottom: 160px;
+    }
+}
+
+h3 {
+  font-size: 38px;
 }
 
 figure {
-  width: 18%;
-  margin: 4.5% 7.3%;
-}
-
-figcaption {
-  font-size: 14px;
-}
-
-.scrollUp {
-  right: 6%;
-}
-
-figure.creation{
-  width: 92%;
-  margin: 4% 4%;
+  width: 90%;
+  margin: 5% 10%;
   clear: both;
 }
 
-input {
+figure img {
   width: 100%;
 }
 
+.contenu {
+  height: 580px;
 }
 
-/** Smartphone landscape resolution 640px **/
-
-@media screen and (max-width: 740px) and (max-height: 420px) {
-
-.background {
- width: 100%;
- -webkit-transform: translate(0%);
- -moz-transform: translate(0%);
- transform: translate(0%);
+nav {
+  width: 80%;
 }
 
-h1 {
- font-size: 40px;
- height: 50px;
+nav ul {
+
 }
 
-h2 {
-  font-size: 12px;
+nav ul li {
+  clear: both;
+  width: 100%;
+  height: 50px;
 }
 
-.monAvatar {
-  border: 4px solid #3A3A3C;
-  width: 120px;
-  height: 120px;
+nav ul li a {
+  width: 94%;
+  margin-top: 0vh;
+  line-height: 8vh;
 }
 
-.moi p {
-  padding-top: 2vh;
-  font-size: 14px;
-}
-
-.skills {
-  min-height: 82vh;
-}
-
-figure {
-  width: 10%;
-  margin: 4.5% 7.3%;
-}
-
-figcaption {
-  font-size: 12px;
-}
-
-.scrollUp {
-  right: 4%;
-}
-
-.creation figcaption {
+.hidden_li {
   display: none;
 }
 
-.video {
-  display: none;
+.logo_footer {
+  width: auto;
+  height: auto;
+  clear: both;
 }
 
-.image {
-  display: none;
+.adresse_footer,
+.social_network,
+.download {
+clear: both;
+height: 90px;
+width: auto;
+margin-left: auto;
+margin-right: auto;
+margin-top: 20px;
+margin-bottom: 20px;
 }
 
-.formulaire p {
-  font-size: 14px;
+.adresse_footer p {
+  margin-left: 20%;
+  text-align: center;
 }
+
+.download img {
+  margin-top: 14px;
+  margin-left: 16px;
+
+}
+
+.infos {
+  width: 60%;
+}
+
+.copyright {
+  width: 45%;
+}
+
+.copyright p,
+.copyright ul {
+  clear: both;
+}
+
+.copyright p{
+  width: 100%;
+}
+
 
 }
