--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,9 +14,8 @@ Body {
 }
 
 img {
-
     width: 100%;
-    /*height: 100vh;*/
+
 }
 
 hr {
@@ -41,7 +40,7 @@ hr {
     -webkit-transition: 1.4s;
     -moz-transition: 1.4s;
     transition: 1.4s;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 h1 {
@@ -54,7 +53,6 @@ h1 {
     height: 92px;
     width: 50%;
     text-align: center;
-    /*letter-spacing: 2px;*/
     margin-bottom: 30px;
     -webkit-animation-name: h1;
     -webkit-animation-duration: 1s;
@@ -187,7 +185,7 @@ h3 {
     color: #a6e1fa;
     font-size: 80px;
     /*text-shadow: 0px 2px 2px black;*/
-    font-weight: lighter;
+    font-weight: 400;
     width: 100%;
     padding-top: 2.5vh;
     margin-bottom: 1.5vh;
@@ -548,6 +546,7 @@ figcaption {
 
 section.contenu_principal {
     width: 100%;
+    min-height: 200px;
     z-index: 4;
 }
 
@@ -974,7 +973,7 @@ footer {
 }
 
 .infos {
-  width: 1000px;
+  width: 960px;
   margin: auto;
 }
 
@@ -982,19 +981,26 @@ footer {
   width: 186px;
   height: 180px;
   float: left;
+  margin-left: 40px;
 }
 
 .logo_footer img {
   margin-top: 36px;
 }
 
-.adresse_footer,
 .social_network,
 .download {
   width: 220px;
   height: 180px;
   float: left;
-  margin-left: 50px;
+  margin-left: 40px;
+}
+
+.adresse_footer {
+  width: 172px;
+  height: 180px;
+  float: left;
+  margin-left: 40px;
 }
 
 .adresse_footer p {
@@ -1034,7 +1040,7 @@ footer {
 }
 
 .copyright {
-  width: 1000px;
+  width: 960px;
   margin: auto;
 }
 
@@ -1045,10 +1051,11 @@ footer {
     font-size: 12px;
     color: #ffffff;
     margin-top: 30px;
+    margin-left: 40px;
 }
 
 .copyright ul {
-  width: 70%;
+  width: 66%;
   height: 80px;
   float: left;
 }
@@ -1280,7 +1287,7 @@ header p {
 }
 
 .nav_responsive_bar li {
-    height: 6vh;
+    min-height: 6vh;
     width: 300px;
     list-style-type: none;
     position: relative;
@@ -1320,6 +1327,107 @@ header p {
 
 @media screen and (max-width: 768px) {
 
+.titre {
+  top: 30%;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 50px;
+}
+
+figure img {
+  width: 60%;
+
+}
+
+.contenu {
+  width: 100%;
+  height: 200px;
+}
+
+nav {
+  display: none;
+}
+
+nav ul {
+  display: none;
+}
+
+.environnement,
+.engagement,
+.legislation,
+.sante,
+.technique,
+.transport,
+.livre,
+.developpement,
+.vie,
+.europe {
+    width: 100%;
+}
+
+.description {
+    width: 310px;
+    margin: auto;
+    padding-top: 50%;
+    transform: translateY(-15%);
+
+}
+
+.description_vertical {
+  transform: translateY(-10%);
+}
+
+.element,
+.element_bis {
+  width: 50%;
+  height: auto;
+  height: 52%;
+}
+
+.element_vertical {
+  width: 50%;
+  height: 80%;
+}
+
+.element_horizontal {
+  width: 100%;
+}
+
+.full_width_height {
+  width: 100%;
+  height: 100%;
+
+}
+
+.none {
+  display: none;
+}
+
+.padding_top {
+  padding-top: 20%;
+}
+
+.margin_top_element {
+  margin: 0;
+}
+
+.infos {
+    width: 502px;
+}
+
+.social_network {
+  clear: both;
+}
+
+.download {
+  margin-left: 20px;
+}
+
 
 
 }
@@ -1336,7 +1444,7 @@ header img {
 }
 
 .titre {
-  top: 26%;
+  top: 32%;
 }
 
 .titre img {
@@ -1349,9 +1457,14 @@ h2 {
 }
 
 .logo {
-  bottom: 160px;
-  left: 92px;
+  width: 122px;
+  height: 62px;
+  bottom: 10px;
+  left: 10px;
+}
 
+.logo img {
+  margin: 6px 12px 6px 11px;
 }
 
 @-moz-keyframes logo {
@@ -1359,44 +1472,57 @@ h2 {
         bottom: 0px;
     }
     50% {
-        bottom: 164px;
+        bottom: 14px;
     }
     75% {
-        bottom: 156px;
+        bottom: 6px;
     }
     100% {
-        bottom: 160px;
+        bottom: 10px;
     }
 }
 
 @-webkit-keyframes logo {
-    0% {
-        bottom: 0px;
-    }
-    50% {
-        bottom: 164px;
-    }
-    75% {
-        bottom: 156px;
-    }
-    100% {
-        bottom: 160px;
-    }
+  0% {
+      bottom: 0px;
+  }
+  50% {
+      bottom: 14px;
+  }
+  75% {
+      bottom: 6px;
+  }
+  100% {
+      bottom: 10px;
+  }
 }
 
 @keyframes logo {
-    0% {
-        bottom: 0px;
-    }
-    50% {
-        bottom: 164px;
-    }
-    75% {
-        bottom: 156px;
-    }
-    100% {
-        bottom: 160px;
-    }
+  0% {
+      bottom: 0px;
+  }
+  50% {
+      bottom: 14px;
+  }
+  75% {
+      bottom: 6px;
+  }
+  100% {
+      bottom: 10px;
+  }
+}
+
+.nav_responsive_bar ul {
+    margin-top: 136px;
+    margin-left: 46px;
+}
+
+.nav_responsive_bar ul li a {
+  line-height: 32px;
+}
+
+main {
+  background-size: inherit;
 }
 
 h3 {
@@ -1404,7 +1530,7 @@ h3 {
 }
 
 figure {
-  width: 90%;
+  width: 80%;
   margin: 5% 10%;
   clear: both;
 }
@@ -1413,32 +1539,37 @@ figure img {
   width: 100%;
 }
 
-.contenu {
-  height: 580px;
+.environnement,
+.engagement,
+.legislation,
+.sante,
+.technique,
+.transport,
+.livre,
+.developpement,
+.vie,
+.europe {
+    width: 100%;
 }
 
-nav {
-  width: 80%;
+.description {
+    width: 80%;
+    margin: auto;
+    transform: translateY(-25%);
+    padding-top: 50%;
 }
 
-nav ul {
-
+.description_vertical {
+  transform: translateY(-10%);
 }
 
-nav ul li {
-  clear: both;
+.element,
+.element_bis,
+.element_vertical {
   width: 100%;
-  height: 50px;
-}
-
-nav ul li a {
-  width: 94%;
-  margin-top: 0vh;
-  line-height: 8vh;
-}
-
-.hidden_li {
-  display: none;
+  height: auto;
+  min-height: 350px;
+  clear: both;
 }
 
 .logo_footer {
