--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,7 +116,7 @@ h1 {
 h2 {
     font-family: 'Open sans', sans-serif;
     color: #ffffff;
-    font-size: 36px;
+    font-size: 34px;
     /*text-shadow: 0px 2px 2px black;*/
     font-weight: lighter;
     width: 100%;
@@ -216,14 +216,18 @@ h3 {
 }
 
 .titre {
-    position: absolute;
-    z-index: 20;
-    top: 24%;
-    width: 100%;
-    margin-bottom: 30px;
+  position: relative;
+  z-index: 20;
+  top: 12%;
+  width: 900px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .titre img {
+    width: 100%;
     position: relative;
     -webkit-animation-name: titre;
     -webkit-animation-duration: 1s;
@@ -286,11 +290,6 @@ h3 {
     100% {
         left: 0%;
     }
-}
-
-.titre img {
-  width: 50%;
-  margin-left: 25%;
 }
 
 .anchor {
@@ -392,12 +391,13 @@ h3 {
 
 .logo {
     background-color: #f5f5f5;
-    position: absolute;
     z-index: 10;
     width: 158px;
     height: 82px;
-    bottom: 60px;
-    left: 60px;
+    position: relative;
+    float: right;
+    margin-top: 42px;
+    margin-right: 20px;
     border-radius: 8px;
     -webkit-animation-name: logo;
     -webkit-animation-duration: 1s;
@@ -420,48 +420,48 @@ h3 {
 }
 
 @-moz-keyframes logo {
-    0% {
-        bottom: 0px;
-    }
-    50% {
-        bottom: 64px;
-    }
-    75% {
-        bottom: 56px;
-    }
-    100% {
-        bottom: 60px;
-    }
+  0% {
+      top: -110px;
+  }
+  50% {
+      top: 4px;
+  }
+  75% {
+      top: -4px;
+  }
+  100% {
+      top: 0px;
+  }
 }
 
 @-webkit-keyframes logo {
-    0% {
-        bottom: 0px;
-    }
-    50% {
-        bottom: 64px;
-    }
-    75% {
-        bottom: 56px;
-    }
-    100% {
-        bottom: 60px;
-    }
+  0% {
+      top: -110px;
+  }
+  50% {
+      top: 4px;
+  }
+  75% {
+      top: -4px;
+  }
+  100% {
+      top: 0px;
+  }
 }
 
 @keyframes logo {
-    0% {
-        bottom: 0px;
-    }
-    50% {
-        bottom: 64px;
-    }
-    75% {
-        bottom: 56px;
-    }
-    100% {
-        bottom: 60px;
-    }
+  0% {
+      top: -110px;
+  }
+  50% {
+      top: 4px;
+  }
+  75% {
+      top: -4px;
+  }
+  100% {
+      top: 0px;
+  }
 }
 
 /* Conteneur_accueil */
@@ -479,7 +479,6 @@ section {
     background-image: url(../img/fond.png);
     background-repeat: repeat;
     background-size: contain;
-    min-height: 100vh;
     width: 100%;
     text-align: center;
     position: relative;
@@ -501,8 +500,7 @@ section.chiffres {
 }
 
 .chiffres_cles {
-  width: 80%;
-  min-height: 34vh;
+  width: 1024px;
   padding-top: 2vh;
   padding-bottom: 12vh;
   margin-left: auto;
@@ -511,17 +509,17 @@ section.chiffres {
 
 figure {
   position: relative;
-  width: 50%;
+  width: 300px;
   height: 220px;
-/*  margin-left: 15%;
-  margin-right: 10%;
-*/  margin-bottom: 5%;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 5%;
   float: left;
+  margin-top: 2%;
 }
 
-figure > img {
-  width: 40%;
-  max-width: 337px;
+.padding_top10 {
+  padding-top: 10%;
 }
 
 .chiffres_left {
@@ -540,13 +538,16 @@ figure > img {
     transition: 1.4s;
 }
 
-figcaption {
-  width: 100%;
+.chiffres_figure p {
+  width: 98%;
   height: 20px;
-  margin-top: 14px;
+  padding-bottom: 20px;
   font-size: 20px;
   color: #0f9fdb;
   text-align: right;
+  font-family: 'Roboto', sans-serif;
+  color: #a6e1fa;
+  font-weight: 300;
 }
 
 .mouvementX {
@@ -656,7 +657,7 @@ section.contenu_principal {
 }
 
 nav {
-  width: 1000px;
+  width: 960px;
   margin: auto;
   padding-top: 32px;
   opacity: 0;
@@ -675,7 +676,7 @@ nav ul {
 }
 
 nav ul li {
-    width: 332px;
+    width: 318px;
     height: 110px;
     background-color: #f5f5f5;
     float: left;
@@ -690,20 +691,24 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    width: 300px;
-    margin-top: 3vh;
+    width: 280px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    line-height: 4vh;
+    line-height: 40px;
     text-decoration: none;
     text-align: center;
-    color: #333333;
+    color: #777777;
     border-bottom: 1px solid #fccc02;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    transition: 0.5s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+}
+
+nav ul li a:hover {
+  color: #333333;
 }
 
 nav ul li:hover {
@@ -994,7 +999,6 @@ footer {
 
 .logo_footer {
   width: 186px;
-  height: 180px;
   float: left;
   margin-left: 40px;
 }
@@ -1006,14 +1010,12 @@ footer {
 .social_network,
 .download {
   width: 220px;
-  height: 180px;
   float: left;
   margin-left: 40px;
 }
 
 .adresse_footer {
   width: 172px;
-  height: 180px;
   float: left;
   margin-left: 40px;
 }
@@ -1059,7 +1061,6 @@ footer {
 }
 
 .copyright {
-  width: 960px;
   margin: auto;
 }
 
@@ -1342,7 +1343,7 @@ header p {
 @media screen and (max-width: 1024px) {
 
 .titre {
-  top: 32%;
+  width: 632px;
 }
 
 h2 {
@@ -1351,25 +1352,24 @@ h2 {
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
 
-.titre img {
-    width: 60%;
-    margin-left: 20%;
+.titre {
+  width: 580px;
 }
 
 h2 {
   font-size: 22px;
 }
 
-h3 {
-  font-size: 50px;
+.chiffres_cles {
+  width: 960px;
 }
 
-figure img {
-  width: 60%;
-
+figure {
+  width: 260px;
 }
+
 
 .contenu {
   display: none;
@@ -1389,25 +1389,25 @@ nav ul {
 .developpement,
 .vie,
 .europe {
-    width: 70%;
-    margin-top: -512px;
+    width: 100%;
+
 }
 
 .description {
     margin: auto;
-    padding-top: 92%;
+    transform: translate(0px);
+    padding-top: 10%;
+    padding-bottom: 10%;
 
-}
-
-.image_granulats {
-  height: 100vh;
 }
 
 .element,
 .element_bis {
   width: 100%;
+  height: auto;
+  margin-top: -5px;
   clear: both;
-  border-bottom: 1px solid #cccccc;
+  border-top: 1px solid #cccccc;
 }
 
 .element_vertical {
@@ -1438,12 +1438,30 @@ nav ul {
 }
 
 .infos {
-    width: 502px;
+  width: 680px;
+  margin: auto;
+
+}
+
+.logo_footer {
+  margin-left: 20px;
+}
+
+.adresse_footer {
+  margin-left: 60px;
 }
 
 .social_network {
-  clear: both;
-  margin-left: 0px;
+  width: 240px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+
+}
+
+.social_network a {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .download {
@@ -1451,7 +1469,7 @@ nav ul {
 }
 
 .copyright ul {
-  width: 36%;
+  width: 60%;
 }
 
 .copyright ul li:first-child,
@@ -1460,88 +1478,55 @@ nav ul {
 
 }
 
+}
+
+@media screen and (max-width: 768px) {
+
+.titre {
+  width: 500px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+h3 {
+  font-size: 50px;
+}
+
+.chiffres_cles {
+  width: 460px;
+}
+
+figure {
+  width: 60%;
+  clear: both;
+  margin-bottom: 8%;
+  margin-top: 8%;
+
+}
+
+figure img {
+  width: 100%;
+}
+
+.element,
+.element_bis,
+.element_vertical {
+  width: 100%;
+  min-height: 350px;
+  clear: both;
+}
 
 
 }
 
 @media screen and (max-width: 420px) {
 
-.anchor {
-  margin-top: 12%;
-}
-
-header {
-  right: -10%;
-  margin: auto;
-  width: 80%;
-  top: 58%;
-  position: relative;
-  margin-top: 2%;
-  -webkit-animation-name: header;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-timing-function: ease-in;
-  -moz-animation-name: header;
-  -moz-animation-duration: 1s;
-  -moz-animation-iteration-count: 1;
-  -moz-animation-timing-function: ease-in;
-  animation-name: header;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in;
-}
-
-@-moz-keyframes header {
-    0% {
-        right: -100%;
-    }
-    50% {
-        right: -11%;
-    }
-    75% {
-        right: -9%;
-    }
-    100% {
-        right: -10%;
-    }
-}
-
-@-webkit-keyframes header {
-  0% {
-      right: -100%;
-  }
-  50% {
-      right: -11%;
-  }
-  75% {
-      right: -9%;
-  }
-  100% {
-      right: -10%;
-  }
-}
-
-@keyframes header {
-  0% {
-      right: -100%;
-  }
-  50% {
-      right: -11%;
-  }
-  75% {
-      right: -9%;
-  }
-  100% {
-      right: -10%;
-  }
-}
-
-header img {
-  width: 76%;
-}
 
 .titre {
-  top: 32%;
+  top: 14%;
+  width: 290px;
 }
 
 .titre img:first-of-type {
@@ -1550,8 +1535,6 @@ header img {
 
 .titre img:last-of-type {
   display: block;
-  width: 80%;
-  margin-left: 10%;
 }
 
 h2 {
@@ -1559,60 +1542,27 @@ h2 {
 }
 
 .logo {
-  width: 150px;
+  width: 148px;
   height: 72px;
   position: relative;
-  top: 0px;
-  left: 54%;
+  float: right;
+  margin-top: 42px;
+  margin-right: 20px;
+
 }
 
 .logo img {
-  margin: 6px 12px 6px 11px;
+  margin: 6px 12px 6px 14px;
 }
 
-@-moz-keyframes logo {
-  0% {
-      top: -110px;
-  }
-  50% {
-      top: 4px;
-  }
-  75% {
-      top: -4px;
-  }
-  100% {
-      top: 0px;
-  }
+.chiffres_cles {
+  width: 100%;
 }
 
-@-webkit-keyframes logo {
-  0% {
-      top: -110px;
-  }
-  50% {
-      top: 4px;
-  }
-  75% {
-      top: -4px;
-  }
-  100% {
-      top: 0px;
-  }
-}
+figure {
+  margin-left: 72px;
+  margin-right: 72px;
 
-@keyframes logo {
-  0% {
-      top: -110px;
-  }
-  50% {
-      top: 4px;
-  }
-  75% {
-      top: -4px;
-  }
-  100% {
-      top: 0px;
-  }
 }
 
 .contenu {
@@ -1640,16 +1590,6 @@ h4 {
   margin-top: 72px;
 }
 
-figure {
-  width: 80%;
-  margin: 5% 10%;
-  clear: both;
-}
-
-figure img {
-  width: 100%;
-}
-
 .environnement,
 .engagement,
 .legislation,
@@ -1666,42 +1606,9 @@ figure img {
     top: 0px;
 }
 
-/*.description {
-    width: 80%;
-    margin: auto;
-    transform: translateY(-25%);
-    padding-top: 50%;
-}*/
-
 .description {
   width: 80%;
   margin: auto;
-  transform: translateY(-12%);
-  padding-top: 20%;
-
-}
-
-.description_vertical {
-  transform: translateY(-10%);
-}
-
-.element,
-.element_bis,
-.element_vertical {
-  width: 100%;
-  height: auto;
-  min-height: 350px;
-  clear: both;
-}
-
-.element img {
-  margin-top: -10px;
-  margin-bottom: -10px;
-
-}
-
-.image_granulats {
-  height: 100vh;
 }
 
 .logo_footer,
