--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,6 +480,7 @@ section {
     background-repeat: repeat;
     background-size: contain;
     width: 100%;
+    min-height: 50vh;
     text-align: center;
     position: relative;
     z-index: 4;
@@ -487,7 +488,7 @@ section {
 }
 
 section.chiffres {
-
+  width: 100%;
 }
 
 .chiffres_figure {
@@ -983,6 +984,7 @@ footer {
 }
 
 .footer_haut {
+  width: 100%;
   min-height: 180px;
   background-color: #ffffff;
 }
@@ -1096,7 +1098,7 @@ footer {
   float: right;
   list-style-type: none;
   margin-top: 30px;
-  margin-left: 2%;
+  margin-left: 10px;
 }
 
 .mentions ul li a {
@@ -1212,7 +1214,7 @@ header p {
     height: auto;
     position: fixed;
     z-index: 50;
-    left: 40px;
+    left: 28px;
     top: 40px;
     -webkit-transition: 1.4s;
     -moz-transition: 1.4s;
@@ -1384,7 +1386,7 @@ figure {
 
 
 .contenu {
-  display: none;
+  height: 280px;
 }
 
 nav ul {
@@ -1401,7 +1403,9 @@ nav ul {
 .developpement,
 .vie,
 .europe {
-    width: 100%;
+    width: 90%;
+    top: -40px;
+    margin-top: -270px;
 
 }
 
@@ -1423,8 +1427,8 @@ nav ul {
 }
 
 .element_vertical {
-  width: 50%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 .element_horizontal {
@@ -1481,7 +1485,7 @@ nav ul {
 }
 
 .infos_bas {
-  width: 588px;
+  width: 636px;
   margin: auto;
 }
 
@@ -1490,12 +1494,13 @@ nav ul {
 }
 
 .mentions {
-    width: 304px;
-    margin-left: 108px;
+  width: 312px;
+  margin-left: 140px;
+
 }
 
 .mentions ul {
-  width: 238px;
+  width: 246px;
 }
 
 .mentions ul li:first-child,
@@ -1506,14 +1511,14 @@ nav ul {
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
 
 .titre {
-  width: 500px;
+  width: 440px;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 h3 {
@@ -1536,11 +1541,28 @@ figure img {
   width: 100%;
 }
 
+.contenu {
+  display: none;
+}
+
+.environnement,
+.engagement,
+.legislation,
+.sante,
+.technique,
+.transport,
+.livre,
+.developpement,
+.vie,
+.europe {
+    width: 100%;
+
+}
+
 .element,
 .element_bis,
 .element_vertical {
   width: 100%;
-  min-height: 350px;
   clear: both;
 }
 
@@ -1586,22 +1608,27 @@ display: none;
 }
 
 .infos {
-  width: 70%;
+  width: 100%;
+}
+
+.footer_haut .infos {
+  width: 258px;
+}
+
+.infos_bas {
+  width: 312px;
+  margin: auto;
 }
 
 .mentions {
-  width: 304px;
-  margin: auto;
+  width: 312px;
+  margin-left: 0px;
   float: none;
 }
 
 .copyright {
   display: none;
 }
-
-
-
-
 
 }
 
@@ -1693,12 +1720,11 @@ h4 {
 .description {
   width: 80%;
   margin: auto;
+  padding-bottom: 34%;
 }
 
-.mentions {
-  width: 98%;
-  margin: auto;
+.infos_bas {
+  width: 100%;
 }
-
 
 }
